# openburo-server

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: api.py  config.py
k8s/: openburo.yaml
sdk/python/: pyproject.toml
sdk/python/openburo/: __init__.py  client.py
sdk/python/tests/: test_client.py
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: client.ts  index.ts  types.ts
sdk/typescript/tests/: client.test.ts
src/backend/: .dockerignore  .env.example  Dockerfile  services.example.yaml
src/backend/app/: api.py  config.py  main.py  models.py
src/backend/app/connectors/: base.py  cozy.py  gdrive.py  jamespot.py  nextcloud.py  openburo.py  twake.py
src/backend/tests/: test_gdrive.py  test_models.py  test_routes.py  test_twake.py
src/frontend/: README.md  package-lock.json
src/frontend/src/lib/: api.ts  config.ts
src/frontend/src/routes/: +layout.svelte  +page.svelte
tests/: test_cozy.py  test_models.py
