[project]
name = "openburo-sdk"
version = "0.1.0"
description = "Minimal Python SDK for the OpenBURO router API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]
